# vuvu-Client

./: README.md  main.py  pyproject.toml  ui.fbp  ui.fbp.old
ui/: __init__.py  noname.py  ui.fbp
